--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browser-refresh": "^1.7.3",
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   },
   "devDependencies": {
